--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "rtl": "webpack"
   },
   "eslintConfig": {
-    "extends": ["react-app", "./src/.eslintrc.js"]
+    "extends": [
+      "react-app",
+      "./src/.eslintrc.js"
+    ]
   },
   "browserslist": {
     "production": [
@@ -33,13 +36,13 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.11",
+    "@formatjs/intl-pluralrules": "^1.3.2",
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.29",
     "@material-ui/pickers": "^3.2.7",
     "@material-ui/styles": "^4.5.0",
-    "material-ui-popup-state": "^1.4.1",
     "@tanem/svg-injector": "^8.0.34",
     "axios": "^0.19.0",
     "axios-mock-adapter": "^1.17.0",
@@ -47,6 +50,7 @@
     "chart.js": "^2.8.0",
     "clipboard-copy": "^3.1.0",
     "clsx": "^1.0.4",
+    "connected-react-router": "^6.6.1",
     "cp-cli": "^2.0.0",
     "css-mediaquery": "^0.1.2",
     "date-fns": "^2.5.1",
@@ -54,12 +58,16 @@
     "downshift": "^3.3.5",
     "fg-loadcss": "^2.1.0",
     "formik": "^1.5.8",
+    "http-proxy-middleware": "^0.20.0",
+    "immer": "^5.0.0",
     "json2mq": "^0.2.0",
     "jss-rtl": "^0.3.0",
     "lodash": "^4.17.15",
+    "material-ui-popup-state": "^1.4.1",
     "object-path": "^0.11.4",
     "perfect-scrollbar": "^1.4.0",
     "prop-types": "^15.7.2",
+    "proptypes": "^1.1.0",
     "react": "^16.10.2",
     "react-bootstrap": "1.0.0-beta.14",
     "react-dom": "^16.10.2",
@@ -67,7 +75,6 @@
     "react-helmet": "^5.2.1",
     "react-highlight": "^0.12.0",
     "react-intl": "^3.6.0",
-    "@formatjs/intl-pluralrules": "^1.3.2",
     "react-is": "^16.10.2",
     "react-perfect-scrollbar": "^1.5.3",
     "react-redux": "^7.1.1",
@@ -86,11 +93,21 @@
     "socicon": "^3.0.5"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "copyfiles": "^2.1.1",
-    "eslint": "^6.6.0",
+    "eslint": "^6.7.1",
     "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-config-react-app": "^5.0.2",
+    "eslint-plugin-flowtype": "^4.5.2",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-redux-saga": "^1.1.1",
     "node-sass": "^4.12.0",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "serve": "^11.2.0",
     "webpack-cli": "^3.3.9",
     "webpack-messages": "^2.0.4",
