fix editable td, add info modal, tabs

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "proptypes": "^1.1.0",
     "react": "^16.10.2",
     "react-bootstrap": "1.0.0-beta.14",
+    "react-contenteditable": "^3.3.2",
     "react-dom": "^16.10.2",
     "react-draggable": "^4.0.3",
     "react-helmet": "^5.2.1",
