fix event info, add create event modal

--- a/package.json
+++ b/package.json
@@ -65,14 +65,17 @@
     "lodash": "^4.17.15",
     "material-ui-popup-state": "^1.4.1",
     "mdi-react": "^6.3.0",
+    "moment": "^2.24.0",
     "object-path": "^0.11.4",
     "perfect-scrollbar": "^1.4.0",
     "prop-types": "^15.7.2",
     "proptypes": "^1.1.0",
     "query-string": "^6.9.0",
+    "rc-time-picker": "^4.0.0-alpha.2",
     "react": "^16.10.2",
     "react-bootstrap": "1.0.0-beta.14",
     "react-contenteditable": "^3.3.2",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.10.2",
     "react-draggable": "^4.0.3",
     "react-helmet": "^5.2.1",
