--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "chart.js": "^2.8.0",
     "clipboard-copy": "^3.1.0",
     "clsx": "^1.0.4",
-    "connected-react-router": "^6.6.1",
     "cp-cli": "^2.0.0",
     "css-mediaquery": "^0.1.2",
     "date-fns": "^2.5.1",
@@ -64,7 +63,7 @@
     "jss-rtl": "^0.3.0",
     "lodash": "^4.17.15",
     "material-ui-popup-state": "^1.4.1",
-    "mdi-react": "^6.3.0",
+    "mdi-react": "^6.6.0",
     "moment": "^2.24.0",
     "object-path": "^0.11.4",
     "perfect-scrollbar": "^1.4.0",
@@ -86,6 +85,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-router-last-location": "^2.0.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.2.0",
     "react-select": "^3.0.8",
     "react-spring": "^8.0.27",
